--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "predeploy": "npm run build",
-    "deploy": "astro build"
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
